<resources>

    <!-- format -->
    <string name="format_profile_nickname">%s님</string>
    <string name="format_version_info">버전 %s</string>

    <string-array name="week_day">
        <item name="common_mon">월</item>
        <item name="common_tue">화</item>
        <item name="common_wed">수</item>
        <item name="common_thu">목</item>
        <item name="common_fri">금</item>
        <item name="common_sat">토</item>
        <item name="common_sun">일</item>
    </string-array>

    <string name="common_home">홈</string>

    <string name="common_by_day">요일별</string>
    <string name="common_by_day_tooni">요일별 투니</string>
    <string name="common_mytoon">마이툰</string>
    <string name="common_more">더보기</string>

    <string name="common_search">검색</string>
    <string name="common_search_title">무엇을 찾으시나요?</string>
    <string name="common_search_hint">작가, 작품 검색어 입력하기</string>
    <string name="common_search_recommend">이런 웹툰 어때요?</string>
    <string name="recent_search">최근 검색어</string>
    <string name="common_tooni_home">투니 홈</string>
    <string name="common_tooni_comment">투니 댓글</string>
    <string name="common_search_empty">검색한 단어를 찾지 못했어요:( </string>

    <string name="ic_favorites_direction">Direction</string>

    <!--watch-->
    <string name="tv_watch_my_toon">마이툰</string>
    <string name="tv_recent_none">최근 본 작품이 없어요:(</string>
    <string name="tv_favorites_none">즐겨찾는 작품이 없어요:(</string>
    <string name="tv_recent_score">%1$f</string>
    <string name="tv_favorites_score">%1$f</string>

    <string name="more_fragment_profile_description">안녕하세요. 투니투니입니다:)</string>
    <string name="more_fragment_update_description">열심히 업데이트 중이에요!</string>
    <string name="more_fragment_send_feedback">피드백 보내기</string>
    <string name="more_fragment_open_source">오픈소스</string>
    <string name="more_fragment_makers">만든 사람들</string>

    <!--recommend-->
    <string name="tv_recommend_toolbar">장르별 추천 투니</string>

    <!--TOP 20 인기 급상승 투니-->
    <string name="tv_top20_toolbar">인기 급상승 투니</string>
    <string name="tv_top20_top20">👑TOP 20👑</string>
    <string name="tv_top20_error">불러오지 못했어요:(</string>

    <!-- 작가상세 -->
    <string name="author_detail_toolbar">추천 작가 투니</string>
    <string name="author_detail_name">작가 이름</string>
    <string name="author_detail_tag">#코미디</string>
    <string name="author_detail_toonilist">투니 리스트</string>



</resources>
