<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kr.tooni.tooni.features.more.MoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_more"
                android:textColor="@color/gray_90"
                android:textSize="@dimen/font_size_16"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_20"
                android:paddingEnd="@dimen/space_20"
                android:paddingBottom="48dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/space_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_default_profile_black"
                    tools:src="@drawable/img_default_profile_black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_10"
                    android:text="@{@string/format_profile_nickname(viewModel.state.nickname)}"
                    android:textColor="@color/gray_90"
                    android:textSize="@dimen/font_size_20"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_image"
                    app:layout_constraintTop_toTopOf="@id/iv_profile_image"
                    tools:text="ID332256788님" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/space_6"
                    android:padding="@dimen/space_4"
                    app:layout_constraintBottom_toBottomOf="@id/tv_name"
                    app:layout_constraintStart_toEndOf="@id/tv_name"
                    app:layout_constraintTop_toTopOf="@id/tv_name"
                    app:srcCompat="@drawable/ic_pencil" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_4"
                    android:text="@string/more_fragment_profile_description"
                    android:textColor="@color/gray_50"
                    android:textSize="@dimen/font_size_12"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    tools:text="안녕하세요. 투니투니입니다 :)" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_version_info"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/space_24"
                    android:background="@drawable/bg_rectangle_solid_light_blue_r5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile_image">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_20"
                        android:text="@{@string/format_version_info(viewModel.state.versionName)}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="버전 12.3" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_18"
                        android:text="@string/more_fragment_update_description"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_12"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_send_feedback"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="@dimen/space_24"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:text="@string/more_fragment_send_feedback"
                    android:textColor="@color/gray_90"
                    android:textSize="@dimen/font_size_14"
                    app:drawableEndCompat="@drawable/ic_send_feedback"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_version_info"
                    tools:text="피드백 보내기" />

                <View
                    android:id="@+id/line_1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_30_opacity10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_send_feedback" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_open_source"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:text="@string/more_fragment_open_source"
                    android:textColor="@color/gray_90"
                    android:textSize="@dimen/font_size_14"
                    app:drawableEndCompat="@drawable/ic_open_source"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_1"
                    tools:text="오픈소스" />

                <View
                    android:id="@+id/line_2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_30_opacity10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_open_source" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_makers"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:text="@string/more_fragment_makers"
                    android:textColor="@color/gray_90"
                    android:textSize="@dimen/font_size_14"
                    app:drawableEndCompat="@drawable/ic_people"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_2"
                    tools:text="만든 사람들" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
