<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="319dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/searchTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_btn" />

        <TextView
            android:id="@+id/searchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/common_search_title"
            android:textColor="@color/gray_90"
            android:textSize="@dimen/font_size_24"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/searchHint"
            app:layout_constraintEnd_toEndOf="@+id/backBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/backBtn" />

        <EditText
            android:id="@+id/searchHint"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/common_search_hint"
            android:textColor="@color/gray_50"
            app:layout_constraintBottom_toTopOf="@+id/searchLine"
            app:layout_constraintEnd_toStartOf="@+id/searchLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/searchTitle" />

        <ImageView
            android:id="@+id/searchImg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@id/searchLine"
            app:layout_constraintStart_toEndOf="@id/searchHint"
            app:layout_constraintTop_toTopOf="@id/searchHint"
            app:srcCompat="@drawable/ic_search" />

        <View
            android:id="@+id/searchLine"
            android:layout_width="335dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/searchImg"
            app:layout_constraintStart_toStartOf="@+id/searchHint"
            app:layout_constraintTop_toBottomOf="@+id/searchHint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_72"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLine"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecommend"
                android:layout_width="327dp"
                android:layout_height="96dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="276dp">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/searchRefresh"
                android:layout_width="193dp"
                android:layout_height="43dp"
                android:layout_marginTop="@dimen/space_84"
                android:background="@drawable/ic_search_design"
                android:drawableEnd="@drawable/ic_refresh"
                android:paddingEnd="18dp"
                android:text="@string/common_search_recommend"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_16"
                app:layout_constraintEnd_toEndOf="@id/searchRecommend"
                app:layout_constraintStart_toStartOf="@id/searchRecommend"
                app:layout_constraintTop_toBottomOf="@id/searchRecommend" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
